--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,4 @@
 [build]
-  command = "npm run build"
-  publish = "dist/portfolio"
+  command = "npm run build:ssr"
+  publish = "dist/portfolio/browser"
 
-[[plugins]]
-  package = "@netlify/angular-runtime"
